# FlexASIO-Fluent

./: LICENSE  README.md  bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
src/: README.md  app.css  app.html  global.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/backup/wix/x64/: locale.wxl  main.wixobj  main.wxs  output.wixpdb
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/src/: main.rs
src-tauri/wix/: custom_InstallDirDlg.wxs  registry.wxs  template.wxs
src/lib/: AudioManager.ts  SystemManager.ts  WindowControls.svelte  WindowTitlebar.svelte  app.ts  color.ts  config.ts  devices.ts  stores.ts  types.ts  utils.ts  window.ts
src/lib/components/: Button.svelte  DeviceEdit.svelte  DevicesColumn.svelte  InfoModal.svelte  OutputEdit.svelte  SettingsModal.svelte  TextArea.svelte  TomlEditor.svelte  WindowsControls.svelte
src/lib/components/fluent-svelte-custom/: CustomComboBox.svelte  CustomExpander.svelte  TextAreaButton.svelte
src/lib/components/windows/: Button.svelte  WindowsControls.svelte
src/lib/controls/: Windows.svelte
src/lib/utils/: compare.ts  config.ts  device.ts  os.ts  system.ts  utils.ts  window.ts
src/routes/: +layout.svelte  +page.svelte
