[package]
name = "FlexASIOGUI"
version = "0.3.3"
description = "A GUI for FlexASIO"
authors = ["ramiro-uziel"]
license = ""
repository = ""
default-run = "FlexASIOGUI"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
log = "0.4.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2.5", features = [] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
hex = "0.4"
toml = "0.8.16"
rust_decimal = "1.35.0"
portaudio = "= 0.7.0"
windows = { version = "0.58.0", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "UI",
    "UI_ViewManagement",
] }
windows-version = "0.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
